# yawl

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  .gitmodules  .xml  00-START-HERE.md  A2A_INTEGRATION_TEST_SUMMARY.md  A2A_PROTOCOL_DIAGRAMS.md  A2A_PROTOCOL_RESEARCH.md  ABSTRACTS_COMPLETION_REPORT.txt  ABSTRACT_ACM_CONFERENCE.txt  ABSTRACT_IEEE_MAGAZINE.txt  ABSTRACT_TOSEM.txt  ACADEMIC_STANDARDS_VALIDATION_REPORT.md  ACTOR-VALIDATION-INTEGRATION-SUMMARY.md  ACTOR_PATTERNS_BREAKING_POINTS.md  AGENT-FEEDBACK.md  AGENT_COMPLIANCE_REPORT.md  AGENT_ENHANCEMENT_GUIDE.md  AGGRESSIVE_STRESS_TEST_REPORT.md  ANSIBLE_DEPLOYMENT_COMPLETE.txt  API.md  ARCHITECTURE.md  AUTONOMOUS_INTELLIGENCE_INDEX.md  AUTONOMOUS_INTELLIGENCE_SUMMARY.md  BASELINE_AND_DELTA_INDEX.md  BASELINE_EXECUTIVE_SUMMARY.txt  BASELINE_INDEX.md  BASELINE_MONITORING_SUMMARY.txt  BASELINE_TEST_STATUS_2026-02-16.txt  BASELINE_VALIDATION_REPORT_2026-02-16.txt  BENCHMARK-REPORT-INTERACTIVE.html  BENCHMARK-REPORTS-INDEX.md  BENCHMARK-RESULTS-1M-CASES.md  BENCHMARK-SUMMARY.md  (+820 more)
.agents/: README.md  (+1 more)
cli/: .coverage  CODE_REVIEW_REPORT.md  COVERAGE_ANALYSIS.md  ERROR_HANDLING_TEST_REPORT.md  FINAL_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  KEY_IMPROVEMENTS.md  PRODUCTION_ERROR_HANDLING.md  QUALITY_GATE_EXECUTIVE_SUMMARY.md  QUALITY_GATE_VALIDATION_REPORT.md  QUALITY_VALIDATION_INDEX.md  QUICK_FIX_GUIDE.md  README.md  REVIEW_INDEX.md  REVIEW_SUMMARY.md  TESTING_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TEST_SUMMARY.md  VALIDATION_REPORT.md  coverage.json  godspeed_cli.py  pyproject.toml  requirements.txt
cli/docs/: CLI_ERROR_MESSAGES.md
cli/test/: conftest.py  test_performance.py
cli/test/integration/: __init__.py  test_cli_error_scenarios.py  test_cli_workflows.py  test_subprocess_safety.py
cli/test/unit/: __init__.py  test_build.py  test_cli_commands.py  test_config.py  test_error_handling.py  test_file_operations.py  test_ggen.py  test_godspeed.py  test_gregverse.py  test_integration_scenarios.py  test_observatory.py  test_security_injection.py  test_shell_commands.py  test_team.py  test_type_safety.py  test_utils.py
cli/tests/dspy/: conftest.py  test_dspy_anomaly_forensics.py  test_dspy_persistence.py  test_dspy_powl_generator.py  test_dspy_resource_routing.py  test_dspy_runtime_adaptation.py  test_dspy_worklet_selection.py
cli/yawl_cli/: __init__.py  build.py  config_cli.py  dspy_config.py  ggen.py  godspeed.py  godspeed_cli.py  gregverse.py  observatory.py  team.py  utils.py
data-modelling-ffi/: Cargo.toml  build.rs  cbindgen.toml
data-modelling-ffi/src/: lib.rs
data-modelling-ffi/stubs/data-modelling-sdk/: Cargo.toml
rust/: Cargo.toml
rust/data-modelling-ffi/: Cargo.toml
rust/data-modelling-ffi/src/: lib.rs
rust/petgraph-jni/: Cargo.toml
rust/petgraph-jni/src/: lib.rs
rust/rust4pm/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  rust4pm.h
rust/rust4pm/src/: lib.rs
rust/rust4pm/tests/: integration.rs  main.rs
rust/rust4pm_nif/: Cargo.toml
rust/rust4pm_nif/.cargo/: config.toml
rust/rust4pm_nif/src/: lib.rs
rust/yawl-hooks/: Cargo.toml
rust/yawl-native/: Cargo.toml  Dockerfile
rust/yawl-native/src/: graph.rs  handlers.rs  main.rs  ontology.rs  pm.rs  sparql.rs  sparql_handlers.rs
scripts/observatory/: .gitignore  Cargo.toml  Makefile  check-staleness.sh  emit-rdf-facts.sh  observatory-simplified.sh  observatory-summary.sh  observatory.conf  observatory.sh  run-static-analysis.sh  rust4pm-audit.sh
scripts/observatory/facts/: rust4pm-bindings.json
scripts/observatory/lib/: common.sh  dependency-registry.sh  discovery-cache.sh  emit-a2a-facts.sh  emit-analysis.sh  emit-architecture-facts.sh  emit-context.sh  emit-coverage.sh  emit-diagrams.sh  emit-docs.sh  emit-facts.sh  emit-integration-diagrams.sh  emit-integration.sh  emit-metrics.sh  emit-receipt-chain.sh  emit-receipt.sh  emit-receipts.sh  emit-static-analysis.sh  emit-structured.sh  emit-yawl-analysis.sh  emit-yawl-xml.sh  error-handling.sh  generate-deps-facts.sh  generate-diagrams.sh  generate-dual-family-facts.sh  generate-duplicates-facts.sh  generate-engine-facts.sh  generate-gates-facts.sh  generate-index.sh  generate-integration-facts.sh  generate-interfaces-facts.sh  generate-maven-hazards-facts.sh  generate-modules-facts.sh  generate-packages-facts.sh  generate-reactor-facts.sh  generate-schema-facts.sh  generate-shared-src-facts.sh  generate-tests-facts.sh  incremental.sh  locking.sh  (+4 more)
scripts/observatory/src/: cache.rs  discovery.rs  main.rs
scripts/observatory/tests/: observatory_test.sh
yawl-hooks/: Cargo.toml
yawl-hooks/crates/delta/: Cargo.toml
yawl-hooks/crates/differ/: Cargo.toml
yawl-hooks/crates/jira/: Cargo.toml
yawl-hooks/crates/scout/: Cargo.toml
yawl-ml-bridge/native/: Cargo.toml  build.sh
yawl-ml-bridge/native/.cargo/: config.toml
yawl-ml-bridge/native/src/: lib.rs
yawl-processmining-service/: Cargo.toml  Dockerfile  docker-compose.processmining.yml
yawl-processmining-service/src/: main.rs  ontology.rs  pm.rs
yawl-rust/rust4pm/: Cargo.toml  Makefile  README.md  build.rs  test_nif.erl
yawl-rust/rust4pm/examples/: simple_token_replay.rs  token_replay_demo.rs
yawl-rust/rust4pm/src/: lib.rs
yawl-rust4pm/rust4pm/: .gitignore  .gitignore_python  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_UPDATED.md  Makefile  PYTHON_BINDINGS_SUMMARY.md  README-NIF.md  README.md  README_PYTHON.md  build-nif.sh  build_nif.sh  build_python.sh  cbindgen.toml  conformance_formula_complete.md  erl_crash.dump  nif_fixed.rs  process_mining_bridge.app  pyproject.toml  requirements.txt  rust4pm.h  setup_python_dev.sh  test_build.sh  test_nif.sh  verify_python_setup.py
yawl-rust4pm/rust4pm/.cargo/: config.toml
yawl-rust4pm/rust4pm/benches/: conformance_benchmarks.rs
yawl-rust4pm/rust4pm/docs/: CONFORMANCE_THRESHOLDS.md  NIF_API.md
yawl-rust4pm/rust4pm/examples/: basic_usage.py  basic_usage.rs  configurable_conformance_demo.rs  sample_log.xes
yawl-rust4pm/rust4pm/src/: atoms.rs  lib.rs
(+11085 files in other folders)
