[package]
name = "data-modelling-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
data-modelling-sdk = { version = "2.3.0", features = ["bpmn", "dmn", "openapi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
