[workspace]
resolver = "2"
members = [
    "yawl-native",
]

[workspace.dependencies]
axum              = { version = "0.7", features = ["json"] }
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tower-http        = { version = "0.5", features = ["cors", "trace"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
oxigraph          = "0.4"
