[package]
name = "yawl-processmining-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yawl-processmining-service"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1   # Better optimization at cost of compile time
strip = true        # Strip symbols for smaller binary

[profile.dev]
opt-level = 1       # Faster dev builds

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Process mining: Note: 'process_mining' crate from rust4pm may have limited availability.
# We use xml and graph processing crates as alternatives if needed.
petgraph = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }
regex = "1"
