[package]
name = "data-modelling-ffi"
version = "2.3.0"
edition = "2021"
description = "C ABI cdylib wrapper for data-modelling-sdk v2.3.0 — produces libdatamodelling.so"
authors = ["YAWL Foundation"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/yawlfoundation/yawl"

[lib]
name = "datamodelling"
crate-type = ["cdylib"]

[dependencies]
data-modelling-sdk = { git = "https://github.com/OffeneDatenmodellierung/data-modelling-sdk", tag = "v2.3.0", features = ["bpmn", "dmn", "openapi", "native-fs", "inference"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
