[package]
name = "petgraph-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
petgraph  = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
jni       = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
