[workspace]
resolver = "2"
members = [
    "crates/delta",
    "crates/differ",
    "crates/jira",
    "crates/scout",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
blake3 = "1.5"
imara-diff = "0.2"
dissimilar = "1.0"
regex = "1.10"
ureq = "3.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
