[package]
name = "observatory"
version = "6.0.0"
edition = "2021"
description = "YAWL V6 Code Analysis Observatory — fast, parallel, incremental"

[[bin]]
name = "observatory"
path = "src/main.rs"

[[bin]]
name = "yawl-hooks"
path = "src/bin/yawl-hooks.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1   # Better optimization at cost of compile time
strip = true        # Strip symbols for smaller binary

[profile.dev]
opt-level = 1       # Faster dev builds

[dependencies]
rayon       = "1.10"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
walkdir     = "2.5"
ahash       = "0.8"   # 3-10x faster HashMap — zero-cost drop-in for std HashMap
