[package]
name = "yawl_ml_bridge"
version = "0.1.0"
edition = "2021"
description = "YAWL ML Bridge - Erlang NIF for DSPy and TPOT2 via PyO3"

[lib]
crate-type = ["cdylib"]
name = "yawl_ml_bridge"

[dependencies]
# Erlang NIF bindings
rustler = "0.32"

# Python bindings
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for long-running Python operations
tokio = { version = "1.0", features = ["rt-multi-thread"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Lazy static for Python interpreter
lazy_static = "1.4"

[features]
default = []
