[package]
name = "rust4pm"
version = "0.1.0"
edition = "2021"

[dependencies]
erl_nif = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3