[package]
name = "yawl-process-mining"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "yawl_process_mining"

[dependencies]
process_mining = "0.5.2"  # The core library from RWTH Aachen
rustler = "0.32"          # Erlang NIF bindings
jni = "0.21"
jni_fn = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"               # For ID generation in Rust
tempfile = "3.8"          # For temporary file creation in tests

[features]
default = ["nif"]
nif = []
# Keep JNI for compatibility but don't build by default
jni = []