[package]
name = "yawl-process-mining"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "process_mining_bridge"

[dependencies]
process_mining = "0.5.2"  # The core library from RWTH Aachen
rustler = { version = "0.32", features = ["default"] }  # Erlang NIF bindings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }  # For UUID generation
lazy_static = "1.4.0"      # For global static HashMap
hex = "0.4"               # For ID generation in Rust
tempfile = "3.8"          # For temporary file creation in tests

[features]
default = ["nif"]
nif = []
jni = []  # Keep JNI for compatibility but don't build by default
