[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "yawl-process-mining"
version = "0.1.0"
description = "High-performance Python bindings for YAWL Process Mining"
authors = [
    {name = "YAWL Foundation", email = "info@yawlfoundation.org"},
]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["process-mining", "workflow", "petri-net", "xes", "alpha-miner", "conformance-checking"]

dependencies = [
    "pyo3>=0.20",
]

[project.urls]
Homepage = "https://github.com/yawlfoundation/yawl"
Documentation = "https://yawlfoundation.github.io/yawl/"
Repository = "https://github.com/yawlfoundation/yawl-rust4pm.git"
"Bug Tracker" = "https://github.com/yawlfoundation/yawl-rust4pm/issues"

[tool.maturin]
name = "yawl_process_mining"
module-name = "yawl_process_mining._yawl_process_mining"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.maturin.project]
requires-python = ">=3.8"

[tool.maturin.features]
pyo3/extension-module = []

[tool.maturin.release]
cargo-features = ["pyo3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["yawl_process_mining"]
omit = [
    "tests/*",
    "setup.py",
    "build/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PGH", # pygrep-hooks
    "PERF", # perflint
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTP
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501", "B011"]
"examples/*" = ["E501", "B011"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''