[package]
name = "delta"
version = "0.1.0"
edition = "2021"
description = "YAWL Intelligence Layer — typed delta types, serialization, blake3 receipts"

[dependencies]
blake3      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
