[package]
name = "differ"
version = "0.1.0"
edition = "2021"
description = "YAWL Intelligence Layer — algorithm selection and dispatch for typed deltas"

[dependencies]
delta       = { path = "../delta" }
dissimilar   = { workspace = true }
toml        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
