[package]
name = "differ"
version = "0.1.0"
edition = "2021"

[dependencies]
delta = { path = "../delta" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
imara-diff = { workspace = true }
dissimilar = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }

[lib]
