[package]
name = "scout"
version = "0.1.0"
edition = "2021"

[dependencies]
delta = { path = "../delta" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }
ureq = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[lib]
