[package]
name = "rust4pm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust4pm"
crate-type = ["cdylib"]

[dependencies]
# UUID handling
uuid = { version = "1.3", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Erlang NIF integration
erlang-nif-sys = "0.9"

# OCEL processing
anyhow = "1.0"
thiserror = "1.0"

# Process mining algorithms
petgraph = "0.6"
indexmap = "2.0"

# Performance
rayon = "1.7"
crossbeam = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cbindgen = "0.26"

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[package.metadata.cargo-machete]
ignored = ["erlang-nif-sys"]

[package.metadata.cargo-machete.warnings]
# These are intentionally ignored as they're build dependencies
erlang-nif-sys = "Required for NIF compilation"